--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon" style="background: #eafde7;"><i class="ion-ios-speedometer-outline" style="color:#41cf2e;"></i></div>
-              <h4 class="title"><a href="https://github.com/Aaivu-Org"></a>Domain Specific Intent Classification of Sinhala Speech Datax</a></h4>
+              <h4 class="title"><a href="https://github.com/Aaivu-Org">Domain Specific Intent Classification of Sinhala Speech Datax</a></h4>
               <p class="description">A domain-specific intent classification for Sinhala language, utilizing a feed-forward neural network with backpropagation, in order to understand a Domain Specific Sinhala utterance , by matching utterance with its intent.</p>
             </div>
           </div>
@@ -175,14 +175,14 @@
           <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon" style="background: #e1eeff;"><i class="ion-ios-world-outline" style="color: #2282ff;"></i></div>
-              <h4 class="title"><a href="https://github.com/Aaivu-Org"></a>Multi-Sim Classifier</a></h4>
+              <h4 class="title"><a href="https://github.com/Aaivu-Org">Multi-Sim Classifier</a></h4>
               <p class="description">A binary classifier that would classify a given customer as a multi-SIM user or otherwise by users, based on the usage patterns extracted from Call Details Records, with a significant accuracy, and provide insights and rationales behind multi-SIM user behaviors</p>
           </div>>
           </div>
           <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon" style="background: #ecebff;"><i class="ion-ios-clock-outline" style="color: #8660fe;"></i></div>
-              <h4 class="title"><a href="https://github.com/Aaivu-Org"></a>Generation of review aspect hierarchy using word embedding and clustering</a></h4>
+              <h4 class="title"><a href="https://github.com/Aaivu-Org">Generation of review aspect hierarchy using word embedding and clustering</a></h4>
               <p class="description">A novel approach to hierarchical aspect aggregation by employing word embedding along with clustering to output a multi-granular structure of aspects, to be used in aspects aggregation phase , in reviews summarization process.</p>
           </div>
           </div>
