--- a/index.html
+++ b/index.html
@@ -365,19 +365,22 @@
 
         <ul id="faq-list" class="wow fadeInUp">
           <li>
-            <a data-toggle="collapse" class="collapsed" href="#faq1">Question 1? <i class="ion-android-remove"></i></a>
+            <a data-toggle="collapse" class="collapsed" href="#faq1">How does Aaivu organization impact its domain? <i class="ion-android-remove"></i></a>
             <div id="faq1" class="collapse" data-parent="#faq-list">
               <p>
-                Answer
+                Aaivu organization helps to eliminate the challenges that are prevailing when 
+                a technique is adapted to the local language. Read <a href="https://arxiv.org/ftp/arxiv/papers/1801/1801.06059.pdf">this article</a> about tamil opensource landscape and the opportunities and 
+                challenges that are prevailing in this domain, to get a better understanding.<>
               </p>
             </div>
           </li>
 
           <li>
-            <a data-toggle="collapse" class="collapsed" href="#faq1">Question 1? <i class="ion-android-remove"></i></a>
+            <a data-toggle="collapse" class="collapsed" href="#faq1">What are the innovations that are done through Aaivu? <i class="ion-android-remove"></i></a>
             <div id="faq1" class="collapse" data-parent="#faq-list">
               <p>
-                Answer
+                Aaivu organization, addresses the discrepencies when NLP related projects are applied to languages that have a significant morphology, which 
+                needs new techniques to be invented and adapted to cope up with it.
               </p>
             </div>
           </li>
