--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
             <div id="faq1" class="collapse" data-parent="#faq-list">
               <p>
                 Aaivu organization helps to eliminate the challenges that are prevailing when 
-                a technique is adapted to the local language. Read <a href="https://arxiv.org/ftp/arxiv/papers/1801/1801.06059.pdf">this article</a> about tamil opensource landscape and the opportunities and 
-                challenges that are prevailing in this domain, to get a better understanding.<>
+                a technique is adapted to the local language. Read this article about <a href="https://arxiv.org/ftp/arxiv/papers/1801/1801.06059.pdf">tamil opensource landscape and the opportunities and 
+                challenges</a> that are prevailing in this domain, to get a better understanding.<>
               </p>
             </div>
           </li>
