--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
               <p>
                 Aaivu organization helps to eliminate the challenges that are prevailing when 
                 a technique is adapted to the local language. Read this article about <a href="https://arxiv.org/ftp/arxiv/papers/1801/1801.06059.pdf">tamil opensource landscape and the opportunities and 
-                challenges</a> that are prevailing in this domain, to get a better understanding.<>
+                challenges that are prevailing in this domain,</a>to get a better understanding.
               </p>
             </div>
           </li>
