--- a/index.html
+++ b/index.html
@@ -173,7 +173,6 @@
 
                 <div class="row">
 
-
                     <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.4s">
                         <div class="box">
                             <div class="icon" style="background: #fff0da;"><i class="ion-ios-bookmarks-outline" style="color: #e98e06;"></i></div>
@@ -182,53 +181,61 @@
                                 based architecture in the colorization domain in order to give a realistic output.</p>
                         </div>
                     </div>
+                    <!-- <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.4s">
+                        <div class="box">
+                            <div class="icon" style="background: #fff0da;"><i class="ion-ios-bookmarks-outline" style="color: #e98e06;"></i></div>
+                            <h4 class="title"><a href="">Video Colorization</a></h4>
+                            <p class="description">A fully automated video colorization framework which can colorize grayscale videos focusing on improved temporal and contextual coherence between frames and scene changes, through the novel use of Recurrent Neural Network (RNN)
+                                based architecture in the colorization domain in order to give a realistic output.</p>
+                        </div>
+                    </div> -->
 
-                    <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
+                    <!-- <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
                         <div class="box">
                             <div class="icon" style="background: #e6fdfc;"><i class="ion-ios-paper-outline" style="color: #3fcdc7;"></i></div>
                             <h4 class="title"><a href="">Data-driven instruction strategies platform</a></h4>
                             <p class="description"> An analytical platform to assist in personalized learning experience by providing data-driven instructions and insights, using performance and personal data, to the main key stakeholders of the education sector in Sri Lanka.</p>
 
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
+                    </div> -->
+                    <!-- <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
                         <div class="box">
                             <div class="icon" style="background: #eafde7;"><i class="ion-ios-speedometer-outline" style="color:#41cf2e;"></i></div>
                             <h4 class="title">
-                                <a href=""></a>Domain Specific Intent Classification of Sinhala Speech Datax</a>
+                                <a href="">Domain Specific Intent Classification of Sinhala Speech Datax</a>
                             </h4>
                             <p class="description">A domain-specific intent classification for Sinhala language, utilizing a feed-forward neural network with backpropagation, in order to understand a Domain Specific Sinhala utterance , by matching utterance with its intent.</p>
                         </div>
-                    </div>
+                    </div> -->
 
-                    <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+                    <!-- <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
                         <div class="box">
                             <div class="icon" style="background: #e1eeff;"><i class="ion-ios-world-outline" style="color: #2282ff;"></i></div>
                             <h4 class="title">
-                                <a href=""></a>Multi-Sim Classifier</a>
+                                <a href="">Multi-Sim Classifier</a>
                             </h4>
                             <p class="description">A binary classifier that would classify a given customer as a multi-SIM user or otherwise by users, based on the usage patterns extracted from Call Details Records, with a significant accuracy, and provide insights and rationales
                                 behind multi-SIM user behaviors</p>
-                        </div>>
-                    </div>
-                    <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+                        </div>
+                    </div> -->
+                    <!-- <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
                         <div class="box">
                             <div class="icon" style="background: #ecebff;"><i class="ion-ios-clock-outline" style="color: #8660fe;"></i></div>
                             <h4 class="title">
-                                <a href=""></a>Generation of review aspect hierarchy using word embedding and clustering</a>
+                                <a href="">Generation of review aspect hierarchy using word embedding and clustering</a>
                             </h4>
                             <p class="description">A novel approach to hierarchical aspect aggregation by employing word embedding along with clustering to output a multi-granular structure of aspects, to be used in aspects aggregation phase , in reviews summarization process.</p>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+                    </div> -->
+                    <!-- <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
                         <div class="box">
                             <div class="icon" style="background: #e1eeff;"><i class="ion-ios-world-outline" style="color: #2282ff;"></i></div>
                             <h4 class="title"><a href="">High scale Mobility On Demand System in Taxi Service Context</a></h4>
                             <p class="description">Improving the current state of the art model, developed by MIT for efficient taxi service provisioning , into a scalable and dynamic model. The proposed solution identifies the optimal number of partitions for a given area
                                 and deploys multiple copies of the improved model on each partition to work individually with dynamic travel time prediction.</p>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+                    </div> -->
+                    <!-- <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
                         <div class="box">
                             <div class="icon" style="background: #ecebff;"><i class="ion-ios-clock-outline" style="color: #8660fe;"></i></div>
                             <h4 class="title"><a href="">Landslide susceptibility modelling and early warning</a></h4>
@@ -236,29 +243,29 @@
                                 accuracy
                             </p>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+                    </div> -->
+                    <!-- <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
                         <div class="box">
                             <div class="icon" style="background: #e1eeff;"><i class="ion-ios-world-outline" style="color: #2282ff;"></i></div>
                             <h4 class="title"><a href="">Polysemy Embedding</a></h4>
                             <p class="description">Contributes to improve word embedding through a novel iterative polysemy embedding model approach, with increased accuracy, and exploring the morphological regularities to present a detailed analysis in word embedding based
                                 morphological manipulation</p>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+                    </div> -->
+                    <!-- <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
                         <div class="box">
                             <div class="icon" style="background: #ecebff;"><i class="ion-ios-clock-outline" style="color: #8660fe;"></i></div>
                             <h4 class="title"><a href="">A Data Collection for Evaluating the Retrieval of Related Tweets to News Articles</a></h4>
                             <p class="description">Related tweet retrieval using a novel data collection approach that combines two existing data set (news article and tweets) , in order to identify and rank tweets that are related to a published news article. </p>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.4s">
+                    </div> -->
+                    <!-- <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.4s">
                         <div class="box">
                             <div class="icon" style="background: #fceef3;"><i class="ion-ios-analytics-outline" style="color: #ff689b;"></i></div>
                             <h4 class="title"><a href="">Embedding Evaluator</a></h4>
                             <p class="description">An hosted tool which can evaluate the embedded output using several evaluation methods to get your accuracy measurement.</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
