--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:description" content="Open Source NLP Research Organization">
     <meta property="og:image" content="img/Aaivu Logo/Aaivu-Logo-Final.jpg">
     <script async="" src="//www.google-analytics.com/analytics.js"></script>
+    <script src="https://kit.fontawesome.com/yourcode.js"></script>
     <script type="application/ld+json">
         {
             "@context": "http://schema.org",
@@ -344,20 +345,30 @@
 
                             <div class="features wow bounceInUp clearfix">
                                 <i class="fa fa-github" style="color: #f058dc;"></i>
-                                <h4><a href="https://github.com/Aaivu-Org">GitHub</a></h4>
-                                <p>Visit to our GitHub and pick some interesting projects</p>
+                                <h4><a href="https://github.com/aaivu/aaivu-introduction">Introduction</a></h4>
+                                <p>Visit to our GitHub Introduction page to learn how to contribute and pick up some interesting projects</p>
                             </div>
 
                             <div class="features wow bounceInUp clearfix">
                                 <i class="fa fa-envelope" style="color: #ffb774;"></i>
-                                <h4>Mailing Groups</h4>
-                                <p>Subscribe to our mailing groups to get more information</p>
+                                <h4>Email
+                                </h4>
+                                <p>Mail us regarding any issues at helloaaivu@gmail.com</p>
                             </div>
 
                             <div class="features wow bounceInUp clearfix">
-                                <i class="fa fa-language" style="color: #589af1;"></i>
-                                <h4>Telegram Group | IRC</h4>
-                                <p>Join our groups.</p>
+                                <i class="fa fa-comments" style="color: #589af1;"></i>
+                                <h4>
+                                    <a href="https://talk.aaivu.org/">Talk forum</a>
+                                </h4>
+                                <p>If you have any community related questions, please ask in the Aaivu Talk forum</p>
+                            </div>
+
+                            <div class="features wow bounceInUp clearfix">
+                                <i class="fa fa-language" style="color: #faa200;"></i>
+                                <h4><a href="https://github.com/aaivu/aaivu-introduction/blob/master/HELP_DESK.MD">Help Desk</a>
+                                </h4>
+                                <p>Please reach us via this Help Desk form to request access to the documentation for edit/write access and Github write access</p>
                             </div>
 
                         </div>
@@ -368,7 +379,7 @@
 
             </div>
 
-            <div class="container">
+            <!-- <div class="container">
                 <div class="row counters">
 
                     <div class="col-lg-3 col-6 text-center">
@@ -393,7 +404,7 @@
 
                 </div>
 
-            </div>
+            </div> -->
         </section>
 
 
@@ -503,7 +514,7 @@
                             <div class="col-sm-6">
 
                                 <div class="footer-info">
-                                    <h3>Aaivu.org</h3>
+                                    <h3>aaivu</h3>
                                     <p>One voice through NLP</p>
                                 </div>
 
@@ -521,11 +532,10 @@
                                 <div class="footer-links">
                                     <h4>Useful Links</h4>
                                     <ul>
-                                        <li><a href="#">Home</a></li>
-                                        <li><a href="#">About us</a></li>
-                                        <li><a href="#">Services</a></li>
-                                        <li><a href="#">Terms of service</a></li>
-                                        <li><a href="#">Privacy policy</a></li>
+                                        <li><a href="#intro">Home</a></li>
+                                        <li><a href="#about">About us</a></li>
+                                        <li><a href="https://github.com/aaivu/aaivu-introduction/blob/master/PROJECTS.MD">Project summary</a></li>
+                                        <li><a href="https://github.com/aaivu/aaivu-introduction/blob/master/docs/code_of_conduct.md">Code of Conduct</a></li>
                                     </ul>
                                 </div>
 
