--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                                 <i class="fa fa-envelope" style="color: #ffb774;"></i>
                                 <h4>Email
                                 </h4>
-                                <p>Mail us regarding any issues at helloaaivu@gmail.com</p>
+                                <p>Mail us regarding any issues at hello@aaivu.org</p>
                             </div>
 
                             <div class="features wow bounceInUp clearfix">
