--- a/index.html
+++ b/index.html
@@ -217,6 +217,17 @@
                             <p class="description">Data-Driven instruction strategies for Sri Lankan high schools.</p>
                         </div>
                     </div>
+                    <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.4s">
+                        <div class="box">
+                            <div class="icon " style="background: #e6fdfc;"><i class="ion-ios-paper-outline " style="color: #3fcdc7;"></i></div>
+                            <h4 class="title">
+                                <a href="https://github.com/aaivu/aaivu-semantic-table-interpretations">Semantic Table Interpretation</a>
+                            </h4>
+                            <p class="description">Semantic Table Interpretation is the use of external knowledge bases or ontologies to provide context to tabular data sources. Data usually loses its context when converted into tabular structures. Hence, mapping these data
+                                back into its original context is non trivial. Since table data is one of most widespread structures in use, the information loss is significant. In this project, we introduce a two novel algorithms, ReleX and STEM, to
+                                derive meaning full relationships between table columns and to identify table entities with context using web ontologies.</p>
+                        </div>
+                    </div>
                     <!-- <div class="col-md-6 col-lg-4 wow bounceInUp " data-wow-duration="1.4s">
                         <div class="box">
                             <div class="icon " style="background: #fff0da;"><i class="ion-ios-bookmarks-outline " style="color: #e98e06;"></i></div>
@@ -346,7 +357,7 @@
                             <div class="features wow bounceInUp clearfix">
                                 <i class="fa fa-github" style="color: #f058dc;"></i>
                                 <h4><a href="https://github.com/aaivu/aaivu-introduction">Introduction</a></h4>
-                                <p>Visit to our GitHub Introduction page to learn how to contribute and pick up some interesting projects</p>
+                                <p>Visit our GitHub Introduction page to learn how to contribute and pick up some interesting projects</p>
                             </div>
 
                             <div class="features wow bounceInUp clearfix">
