Added Tamizhi net OCR

--- a/index.html
+++ b/index.html
@@ -228,6 +228,13 @@
                                 derive meaning full relationships between table columns and to identify table entities with context using web ontologies.</p>
                         </div>
                     </div>
+                    <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.4s">
+                        <div class="box">
+                            <div class="icon " style="background: #e6fdfc;"><i class="ion-ios-paper-outline " style="color: #3fcdc7;"></i></div>
+                            <h4 class="title"><a href="http://ec2-18-118-18-103.us-east-2.compute.amazonaws.com/">Tamizhi Net OCR</a></h4>
+                            <p class="description">Tamizhi-Net OCR is a tool that extract text from scanned Pdf/Image. The system covers Tamil, Sinhala and English languages.</p>
+                        </div>
+                    </div>
                     <!-- <div class="col-md-6 col-lg-4 wow bounceInUp " data-wow-duration="1.4s">
                         <div class="box">
                             <div class="icon " style="background: #fff0da;"><i class="ion-ios-bookmarks-outline " style="color: #e98e06;"></i></div>
